# paracl-interpreter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix  flake.nix  test.sh
.github/workflows/: clang-format-check.yml  workflow.yaml
05-paracl/01-basic-paracc/: .gitignore  CMakeLists.txt  README.md
05-paracl/01-basic-paracc/examples/: simple.bpcl  trivial.bpcl
05-paracl/01-basic-paracc/include/: bytecode_vm.hpp  codegen.hpp  frontend.hpp  utils.hpp
05-paracl/01-basic-paracc/include/bytecode_vm/: bytecode_builder.hpp  chunk.hpp  constant_pool.hpp  decl_vm.hpp  disassembly.hpp  opcodes.hpp  virtual_machine.hpp
05-paracl/01-basic-paracc/include/frontend/: ast.hpp  copier.hpp  dumper.hpp  error.hpp  frontend_driver.hpp  lexer.hpp  parser.hpp  scanner.hpp  semantic_analyzer.hpp  symtab.hpp
05-paracl/01-basic-paracc/include/frontend/ast/: assignment_statement.hpp  ast_container.hpp  ast_copier.hpp  ast_nodes.hpp  ast_tree.hpp  binary_expression.hpp  constant_expression.hpp  i_ast_node.hpp  i_expression_node.hpp  i_statement_node.hpp  if_statement.hpp  print_statement.hpp  read_expression.hpp  statement_block.hpp  statement_expression.hpp  unary_expression.hpp  variable_expression.hpp  while_statement.hpp
05-paracl/01-basic-paracc/include/frontend/ast/ast_nodes/: assignment_statement.hpp  binary_expression.hpp  constant_expression.hpp  error_node.hpp  i_ast_node.hpp  if_statement.hpp  print_statement.hpp  read_expression.hpp  statement_block.hpp  unary_expression.hpp  variable_expression.hpp  while_statement.hpp
05-paracl/01-basic-paracc/include/frontend/ast/visitor/: dumper.hpp  resolver.hpp  visitor.hpp
05-paracl/01-basic-paracc/include/utils/: algotihm.hpp  printer.hpp  serialization.hpp  utils.hpp
05-paracl/01-basic-paracc/specs/: bytecode.txt  grammar.txt
05-paracl/01-basic-paracc/src/: chunk.cc  codegen.cc  decl_vm.cc  driver.cc  pclc.cc  pcldis.cc  pclvm.cc  virtual_machine.cc
05-paracl/01-basic-paracc/src/frontend/: ast.cc  ast_container.cc  ast_copier.cc  copier.cc  dumper.cc  parser.y  scanner.l  semantic_analyzer.cc
05-paracl/01-basic-paracc/src/frontend/ast/: dumper.cc  resolver.cc  semantic_analyzer.cc
05-paracl/01-basic-paracc/test/: 6.cl
05-paracl/01-basic-paracc/test_programs/: assignments.pcl  fact.pcl  fib.pcl  ill_formed.pcl
ezvis/: README.md
ezvis/include/ezvis/: ezvis.hpp
ezvis/test/: ezvis.cc
include/: bytecode_vm.hpp  codegen.hpp  frontend.hpp  utils.hpp
include/bytecode_vm/: bytecode_builder.hpp  decl_vm.hpp  disassembly.hpp  opcodes.hpp  virtual_machine.hpp
include/dag/: dag.hpp  directed_graph.hpp  oriented_graph.hpp
include/ezvis/ezvis/: ezvis.hpp
include/frontend/: ast.hpp  call_collector.hpp  callgraph.hpp  dumper.hpp  error.hpp  frontend_driver.hpp  function_explorer.hpp  function_table.hpp  function_table_filler.hpp  functions_analytics.hpp  scanner.hpp  semantic_analyzer.hpp  source.hpp  symtab.hpp
include/frontend/analysis/: augmented_ast.hpp  callgraph.hpp  function_explorer.hpp  function_table.hpp  functions_analytics.hpp  main_explorer.hpp  semantic_analyzer.hpp  usegraph.hpp
include/frontend/ast/: ast_container.hpp  ast_copier.hpp  ast_nodes.hpp  function_table.hpp  node_identifier.hpp  visitor.hpp
include/frontend/ast/ast_nodes/: assignment_statement.hpp  binary_expression.hpp  constant_expression.hpp  error_node.hpp  function_call.hpp  function_decl.hpp  i_ast_node.hpp  if_statement.hpp  print_statement.hpp  read_expression.hpp  return_statement.hpp  statement_block.hpp  subscript.hpp  unary_expression.hpp  value_block.hpp  variable_expression.hpp  while_statement.hpp
include/frontend/types/: types.hpp
include/llvm_codegen/: codegen.hpp
include/utils/: algorithm.hpp  files.hpp  misc.hpp  serialization.hpp  transparent.hpp
nix/: treefmt.nix
scripts/: test.sh  test_compare.sh  test_fail.sh
specs/: grammar.txt
src/: codegen.cc  common.hpp  pclc.cc  pcldis.cc  pclvm.cc
src/bytecode_vm/: decl_vm.cc
src/frontend/: ast_copier.cc  call_collector.cc  dumper.cc  function_explorer.cc  function_table_filler.cc  parser.y  scanner.l  semantic_analyzer.cc
src/frontend/analysis/: function_explorer.cc  semantic_analyzer.cc
src/frontend/parser/: old_parser.y  parser.y  scanner.l
src/llvm_codegen/: CMakeLists.txt  codegen.cpp
test/: CMakeLists.txt  test.sh
test/array/: subscript-var.pcl  subscript.pcl
test/blocks/: basic.pcl  block_with_return_and_side_effect.pcl  cond_block.pcl  conditional_return.pcl  explicit_return.pcl  nested_and_chained_blocks.pcl  nested_block_returns.pcl  nested_blocks.pcl  print_sum_of_blocks.pcl  simple_block_return.pcl  simple_block_sum.pcl  unused_block_return_value.pcl
test/errors/: call_in_sum.pcl  mismatch_call.pcl  mismatch_return_block.pcl  syntax_error_unexpected_constant.pcl  unknown_char.pcl
test/functions/: 1.pcl  2.pcl  3.pcl  4.pcl  5.pcl  6.pcl  7.pcl  8.pcl  arg_call.pcl  call_in_sum.pcl  conditional_return.pcl  conditional_return_2.pcl  emptyexpr.pcl  explicit_return_in_block.pcl  fact_recursive.pcl  funny_returns_form_if_else.pcl  funny_returns_form_if_else.pcl.ans  funny_returns_form_if_else.pcl.in  nested_and_chained_blocks.pcl  nested_block_return.pcl  recursive_fib.pcl  return.pcl  return_1_no_args.pcl  simple_block_sum.pcl  unused_block_return_value.pcl  void_function.pcl
test/globals/: 1.pcl
test/ill_formed/: redeclaration.pcl
test/types/: 2.pcl  4.pcl  6.pcl
unit_tests/: dag.cc  directed_graph.cc  ezvis.cc  main.cc  oriented_graph.cc
